--- a/package.json
+++ b/package.json
@@ -3,14 +3,20 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next",
+    "dev": "node ./server/index.js",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "watch": "nodemon --exec npm run dev -- ./server/index.js"
   },
   "dependencies": {
     "@zeit/next-sass": "^1.0.1",
+    "body-parser": "^1.19.0",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "fs": "0.0.1-security",
     "isomorphic-unfetch": "^3.0.0",
     "mongodb": "^3.3.3",
+    "mongoose": "^5.7.12",
     "next": "9.1.1",
     "node-sass": "^4.13.0",
     "nodemon": "^1.19.4",
