--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express": "^4.17.1",
     "fs": "0.0.1-security",
     "isomorphic-unfetch": "^3.0.0",
+    "material-ui": "^0.20.2",
     "mongodb": "^3.3.3",
     "mongoose": "^5.7.12",
     "next": "9.1.1",
