--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "pretty": "prettier --write \"./**/*.{js,jsx,json}\""
   },
   "dependencies": {
+    "@material-ui/core": "^4.7.1",
     "@zeit/next-sass": "^1.0.1",
     "body-parser": "^1.19.0",
     "dotenv": "^8.2.0",
