--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@material-ui/core": "^4.7.1",
+    "@material-ui/icons": "^4.5.1",
     "@zeit/next-sass": "^1.0.1",
     "body-parser": "^1.19.0",
     "dotenv": "^8.2.0",
