--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "start": "node ./server/index.js",
     "build": "next build",
-    "wtch": "nodemon --exec npm run start -- ./server/index.js",
+    "watch": "nodemon --exec npm run start -- ./server/index.js",
     "pretty": "prettier --write \"./**/*.{js,jsx,json}\""
   },
   "dependencies": {
