--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "start": "node ./server/index.js",
+    "start": "NODE_ENV=production node ./server/index.js -p $PORT",
     "build": "next build",
     "watch": "nodemon --exec npm run start -- ./server/index.js",
     "pretty": "prettier --write \"./**/*.{js,jsx,json}\""
@@ -25,5 +25,8 @@
     "prettier": "^1.19.1",
     "react": "16.11.0",
     "react-dom": "16.11.0"
+  },
+  "engines": {
+    "node": "10.x"
   }
 }
