--- a/.env.dist
+++ b/.env.dist
@@ -1,3 +1,15 @@
+# ??
 API_HOST=http://localhost:3000
+
+# Application port
 PORT=3001
+
+# Database URI
 MONGODB_URI=mongodb://localhost:32768/mis?retryWrites=true
+
+# Google auth
+GOOGLE_CLIENT_ID=
+GOOGLE_CLIENT_SECRET=
+
+# Allowed domain eg. "mydomain.com" (no protocol)
+AUTH_ALLOWED_DOMAIN=
