[ref #26] Additions to authentication
- Authentication is now toggled with a boolean set in .env file
- Updates readme to reflect latest changes.

--- a/.env.dist
+++ b/.env.dist
@@ -8,8 +8,9 @@ PORT=3001
 MONGODB_URI=mongodb://localhost:32768/mis?retryWrites=true
 
 # Google auth
+GOOGLE_AUTH_ENABLED=
 GOOGLE_CLIENT_ID=
 GOOGLE_CLIENT_SECRET=
 
 # Allowed domain eg. "mydomain.com" (no protocol)
-AUTH_ALLOWED_DOMAIN=
+GOOGLE_AUTH_ALLOWED_DOMAIN=
