--- a/.env.dist
+++ b/.env.dist
@@ -1,6 +1,9 @@
 # ??
 API_HOST=http://localhost:3000
 
+# Hostname without your port, but with protocol. Eg. http://localhost 
+APP_HOSTNAME=
+
 # Application port
 PORT=3001
 
