--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "start": "NODE_ENV=production node ./server/index.js -p $PORT",
     "build": "next build",
-    "watch": "nodemon ./server/index.js",
+    "watch": "NODE_ENV=development nodemon ./server/index.js",
     "pretty": "prettier --write \"./**/*.{js,jsx,json}\""
   },
   "dependencies": {
