Replace express-session with cookie-session
- Uses cookie-session
- New secret for cookies added to .env variables

--- a/.env.dist
+++ b/.env.dist
@@ -17,3 +17,4 @@ GOOGLE_CLIENT_SECRET=
 
 # Allowed domain eg. "mydomain.com" (no protocol)
 GOOGLE_AUTH_ALLOWED_DOMAIN=
+GOOGLE_AUTH_COOKIE_SECRET=
