--- a/heroku.yml
+++ b/heroku.yml
@@ -4,8 +4,8 @@ setup:
     as: MONGODB
 build:
   docker:
-    mis: Dockerfile
+    web: Dockerfile
   config:
     NODE_ENV: production
 run:
-  mis: npm start
+  web: npm start
